lib/GSL/Special/legendre.h

int gsl_sf_legendre_Pl_e(int l,double x,double* result);
double gsl_sf_legendre_Pl(int l,double x);
int gsl_sf_legendre_Pl_array(int lmax,double x,double* result_array);
int gsl_sf_legendre_Pl_deriv_array(int lmax,double x,double* result_array,double* result_deriv_array);
int gsl_sf_legendre_P1_e(double x,double* result);
int gsl_sf_legendre_P2_e(double x,double* result);
int gsl_sf_legendre_P3_e(double x,double* result);
double gsl_sf_legendre_P1(double x);
double gsl_sf_legendre_P2(double x);
double gsl_sf_legendre_P3(double x);
int gsl_sf_legendre_Q0_e(double x,double* result);
double gsl_sf_legendre_Q0(double x);
int gsl_sf_legendre_Q1_e(double x,double* result);
double gsl_sf_legendre_Q1(double x);
int gsl_sf_legendre_Ql_e(int l,double x,double* result);
double gsl_sf_legendre_Ql(int l,double x);
int gsl_sf_legendre_Plm_e(int l,int m,double x,double* result);
double gsl_sf_legendre_Plm(int l,int m,double x);
int gsl_sf_legendre_Plm_array(int lmax,int m,double x,double* result_array);
int gsl_sf_legendre_Plm_deriv_array(int lmax,int m,double x,double* result_array,double* result_deriv_array);
int gsl_sf_legendre_sphPlm_e(int l,int m,double x,double* result);
double gsl_sf_legendre_sphPlm(int l,int m,double x);
int gsl_sf_legendre_sphPlm_array(int lmax,int m,double x,double* result_array);
int gsl_sf_legendre_sphPlm_deriv_array(int lmax,int m,double x,double* result_array,double* result_deriv_array);
int gsl_sf_legendre_array_size(int lmax,int m);
int gsl_sf_conicalP_half_e(double lambda,double x,double* result);
double gsl_sf_conicalP_half(double lambda,double x);
int gsl_sf_conicalP_mhalf_e(double lambda,double x,double* result);
double gsl_sf_conicalP_mhalf(double lambda,double x);
int gsl_sf_conicalP_0_e(double lambda,double x,double* result);
double gsl_sf_conicalP_0(double lambda,double x);
int gsl_sf_conicalP_1_e(double lambda,double x,double* result);
double gsl_sf_conicalP_1(double lambda,double x);
int gsl_sf_conicalP_sph_reg_e(int l,double lambda,double x,double* result);
double gsl_sf_conicalP_sph_reg(int l,double lambda,double x);
int gsl_sf_conicalP_cyl_reg_e(int m,double lambda,double x,double* result);
double gsl_sf_conicalP_cyl_reg(int m,double lambda,double x);
int gsl_sf_legendre_H3d_0_e(double lambda,double eta,double* result);
double gsl_sf_legendre_H3d_0(double lambda,double eta);
int gsl_sf_legendre_H3d_1_e(double lambda,double eta,double* result);
double gsl_sf_legendre_H3d_1(double lambda,double eta);
int gsl_sf_legendre_H3d_e(int l,double lambda,double eta,double* result);
double gsl_sf_legendre_H3d(int l,double lambda,double eta);
int gsl_sf_legendre_H3d_array(int lmax,double lambda,double eta,double* result_array);